--- a/deno-wasm-rust/rs_lib/Cargo.toml
+++ b/deno-wasm-rust/rs_lib/Cargo.toml
@@ -16,6 +16,9 @@ opt-level = "z"
 wasm-bindgen = "=0.2.83"
 js-sys = "0.3.60"
 wasm-bindgen-futures = "0.4.33"
+wasm-streams = "0.3.0"
+futures-util = { version = "0.3.25", features = ["async-await"] }
+# tokio = { version = "1.24.1", features = ["fs", "io-util"] }
 
 [dependencies.web-sys]
 version = "0.3.4"
