--- a/wasmtime/Cargo.toml
+++ b/wasmtime/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+tokio = { version = "1.24.1", features = ["rt", "macros"] }
 wasmtime = "4.0.0"
-wasmtime-wasi = "4.0.0"
+wasmtime-wasi = { version = "4.0.0", features = ["tokio"] }
