wasmtime: add experimental HTTP client
Signed-off-by: Miroslav Bajtoš <oss@bajtos.net>

--- a/wasmtime/lib/Cargo.toml
+++ b/wasmtime/lib/Cargo.toml
@@ -11,3 +11,7 @@ codegen-units = 1
 incremental = true
 lto = true
 opt-level = "z"
+
+[dependencies]
+http = "0.2.8"
+wasi-experimental-http = "0.10.0"
