--- a/wasmtime/Cargo.toml
+++ b/wasmtime/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1.24.1", features = ["rt", "macros"] }
-wasmtime = "4.0.0"
-wasmtime-wasi = { version = "4.0.0", features = ["tokio"] }
+wasi-experimental-http-wasmtime = "0.10.0"
+wasmtime = "0.35"
+wasmtime-wasi = { version = "0.35", features = ["tokio"] }
