--- a/deno-wasm-rust/deno.jsonc
+++ b/deno-wasm-rust/deno.jsonc
@@ -1,5 +1,6 @@
 {
   "tasks": {
+    "demo": "deno run --allow-net --allow-write --allow-read demo.ts",
     "wasmbuild": "deno run -A https://deno.land/x/wasmbuild@0.10.3/main.ts"
   }
 }
