--- a/deno-core/Cargo.toml
+++ b/deno-core/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2021"
 deno_core = "0.168.0"
 futures = "0.3.25"
 tokio = { version = "1.24.1", features = ["rt", "macros", "time"] }
+
+[workspace]
+members = [
+  "mod-rs",
+]
