--- a/deno-core/Cargo.toml
+++ b/deno-core/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+base64-simd = "0.8.0"
 deno_core = "0.168.0"
 futures = "0.3.25"
 tokio = { version = "1.24.1", features = ["rt", "macros", "time"] }
